RESOLVED FIXED130136
[Mac] Crash when running media/fallback.html test in MediaPlayerPrivateAVFoundation::scheduleMainThreadNotification()
https://bugs.webkit.org/show_bug.cgi?id=130136
Summary [Mac] Crash when running media/fallback.html test in MediaPlayerPrivateAVFoun...
Jer Noble
Reported 2014-03-12 09:47:04 PDT
[Mac] Crash when running media/fallback.html test in MediaPlayerPrivateAVFoundation::scheduleMainThreadNotification()
Attachments
Patch for landing (3.05 KB, patch)
2014-03-12 09:53 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2014-03-12 09:53:49 PDT
Created attachment 226521 [details] Patch for landing
Jer Noble
Comment 2 2014-03-12 10:45:52 PDT
Note You need to log in before you can comment on or make changes to this bug.